--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีค่าา,<br> ฉัน <span class="text-typed a-typed a-typed-about" data-text="ญาโณทัย ชวนประเสริฐ"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">โรงเรียนดาราสมุทร ศรีราชา</h3>
                                         <p class="animate-element delay8 fadeInUp">วัน เดือน ปีเกิด<b>::)</b>  16 ตุลาคม 2548.</p>
-                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>::)</b>  ไข่มก.</p>
+                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>::)</b>  ไข่มุก.</p>
                                         <p class="animate-element delay8 fadeInUp">คติประจำใจ<b>::)</b>  ทำวันนี้ให้ดีที่สุด.</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/kaimook"><i class="fab fa-facebook-f"></i></a>
